# tuich

./: Cargo.toml  README.md
examples/: simple.rs  text-wrapping.rs
examples/todo/: app.rs  main.rs  state.rs
examples/todo/widget/: todo.rs
src/: lib.rs  terminal.rs
src/backend/: backend.rs  crossterm.rs  mod.rs
src/buffer/: buffer.rs  cell.rs  mod.rs
src/event/: key.rs  mod.rs  mouse.rs
src/layout/: clip.rs  mod.rs  position.rs  rect.rs  stack.rs  text.rs  wrap.rs
src/state/: mod.rs  prompt.rs
src/style/: border.rs  color.rs  glyphs.rs  mod.rs  style.rs  stylized.rs
src/text/: line.rs  mod.rs  span.rs  text.rs
src/widget/: block.rs  borders.rs  clear.rs  dummy.rs  line.rs  list.rs  mod.rs  paragraph.rs  prompt.rs  widget.rs
